[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.5.0"
uuid = { version = "1", features = ["v4", "serde"] } # Added "serde" feature here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-web = "4"
actix-rt = "2.5.0"
uuid = { version = "1", features = ["v4", "serde"] } # Added "serde" feature here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
# Ensure tests are run in a development profile with optimization settings suited for testing.
opt-level = 1

[profile.test]
# For better performance and reasonable debug information during tests.
opt-level = 2

[lib]
name = "rust_project"
path = "src/lib.rs"
